--- a/index.html
+++ b/index.html
@@ -19,15 +19,23 @@
     <h1 id="greet-username" class="hidden"></h1>
     <h2 id="clock">00:00</h2>
 
+    <form id="todo-form">
+        <input type="text" placeholder="Write a To Do and Press Enter" required />
+    </form>
+    <ul id="todo-list"></ul>
+
     <div id="quotes">
-        <span class="quote"></span><p>
+        <span class="quote"></span>
+        <p>
         <span class="author"></span>
     </div>
 
+    <script src="js/todo.js"></script>
     <script src="js/background.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
+
 </body>
 
 </html>
